added tests for enum